--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,8 @@
     "canvas": "^3.1.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0"
-  }
+  },
+  "scripts": {
+  "start": "node index.js"
+}
 }
