--- a/src/package.json
+++ b/src/package.json
@@ -6,10 +6,15 @@
     "body-parser": "^2.2.0",
     "canvas": "^3.1.0",
     "cors": "^2.8.5",
+    "dot": "^1.1.3",
+    "dotenv": "^16.5.0",
+    "env": "^0.0.2",
     "express": "^5.1.0",
-    "mongodb": "^6.16.0"
+    "mongodb": "^6.16.0",
+    "nodemon": "^3.1.10"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+      "dev": "nodemon index.js" 
   }
 }
