--- a/src/package.json
+++ b/src/package.json
@@ -9,12 +9,13 @@
     "dot": "^1.1.3",
     "dotenv": "^16.5.0",
     "env": "^0.0.2",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
     "nodemon": "^3.1.10"
   },
   "scripts": {
     "start": "node index.js",
-      "dev": "nodemon index.js" 
+    "dev": "nodemon index.js"
   }
 }
